# Chalk

./: README.md  pyproject.toml
Chalk/: Reader.py  textbook_reader.py
Chalked Out/: chalk_problem_designer.py  chalk_textbook_reader.py
designer/: main.py
docs/: specification.adoc
main/: board.py  chalk.py
samples/: chalk.chalk
samples/exception_tests/: no_import_block.chalk  perfect_chalk.chalk  to_many_chalk_block.chalk
src/chalk/: __init__.py  chalk.py  checker.py  cleaner.py  drawer.py  exceptions.py  generator.py  imported.py  parser.py  splitter.py  starter.py
tests/chalk/: test_parser.py
