[project]
name = "chalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lloydandersen", email = "lloydandersenco@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
