[project]
name = "Chalk"
version = "0.1.0"
description = "The Chalk Library allows for the creation of synthetic problem sets."
readme = "README.md"
authors = [
    { name = "lloydandersen", email = "lloydandersenco@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
